fix: 消除编译告警，替换已废弃的 Long 构造函数和 RedisServerCommands API，补充 Lombok 和泛型抑制注解